<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.herysapps.calculatordialoglib.CalculatorDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewSymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="S"
                android:textColor="@color/valueOperationColor"
                android:textSize="46sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.8"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <HorizontalScrollView
                android:id="@+id/horizontalScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fillViewport="true"
                android:scrollbars="none"
                android:transcriptMode="alwaysScroll">

                <TextView
                    android:id="@+id/textViewValueOperation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="start"
                    android:gravity="end"
                    android:scrollbars="horizontal"
                    android:text="@string/dummy"
                    android:textColor="@color/valueOperationColor"
                    android:textSize="@dimen/operationTextSize"

                    />

            </HorizontalScrollView>


            <TextView
                android:id="@+id/textViewValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="end"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/dummy"
                android:textColor="@color/valueTotalColor"
                android:textSize="@dimen/valueTextSize" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/numbers"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.75"
            android:background="@color/numberBackgroundColor"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button07"
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num07"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

                <TextView
                    android:id="@+id/button08"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num08"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

                <TextView
                    android:id="@+id/button09"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num09"

                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button04"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num04"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

                <TextView
                    android:id="@+id/button05"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num05"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

                <TextView
                    android:id="@+id/button06"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num06"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num01"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

                <TextView
                    android:id="@+id/button02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num02"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

                <TextView
                    android:id="@+id/button03"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num03"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/buttonPoint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/numPoint"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

                <TextView
                    android:id="@+id/button00"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/num00"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

                <TextView
                    android:id="@+id/buttonEqual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:text="@string/numEqual"
                    android:textColor="@color/numberColor"
                    android:textSize="@dimen/numberTextSize" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/operators"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.25"
            android:background="@color/operatorBackgroundColor"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageButtonDel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_button"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_backspace" />

            <TextView
                android:id="@+id/buttonDivision"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/division"
                android:textColor="@color/operatorColor"
                android:textSize="@dimen/operatorTextSize" />

            <TextView
                android:id="@+id/buttonMultiplication"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/multiplication"
                android:textColor="@color/operatorColor"
                android:textSize="@dimen/operatorTextSize" />

            <TextView
                android:id="@+id/buttonSubtraction"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/subtraction"
                android:textColor="@color/operatorColor"
                android:textSize="@dimen/operatorTextSize" />

            <TextView
                android:id="@+id/buttonSum"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/sum"
                android:textColor="@color/operatorColor"
                android:textSize="@dimen/operatorTextSize" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:minWidth="100dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/negative_button"
            android:textColor="@color/dialogButtons" />

        <TextView
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:minWidth="100dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/positive_button"
            android:textColor="@color/dialogButtons" />

    </LinearLayout>

</LinearLayout>
