<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/operators"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/operatorBackgroundColor"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageButtonDel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_button"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_backspace" />

    <TextView
        android:id="@+id/buttonMultiplication"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:text="@string/multiplication"
        android:textColor="@color/operatorColor"
        android:textSize="@dimen/operatorTextSizeFullscreen"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDivision"
        app:layout_constraintTop_toTopOf="@+id/buttonDivision" />

    <TextView
        android:id="@+id/buttonDivision"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:text="@string/division"
        android:textColor="@color/operatorColor"
        android:textSize="@dimen/operatorTextSizeFullscreen"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtraction"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonDel" />

    <LinearLayout
        android:id="@+id/imageButtonOkContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/okBackgroundColor"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <ImageView
            android:id="@+id/imageButtonOk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_button"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_check" />
    </LinearLayout>

    <TextView
        android:id="@+id/buttonSum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:text="@string/sum"
        android:textColor="@color/operatorColor"
        android:textSize="@dimen/operatorTextSizeFullscreen"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSubtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSubtraction"
        app:layout_constraintTop_toTopOf="@+id/buttonSubtraction" />

    <TextView
        android:id="@+id/buttonSubtraction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:text="@string/subtraction"
        android:textColor="@color/operatorColor"
        android:textSize="@dimen/operatorTextSizeFullscreen"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonOkContainer"
        app:layout_constraintEnd_toStartOf="@+id/buttonSum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivision" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />


</androidx.constraintlayout.widget.ConstraintLayout>